Fixed footer link text wrapping. Fixed #15

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -16,6 +16,7 @@
 .footer__link {
   font-weight: 200;
   text-align: start;
+  white-space: nowrap;
   padding: 0;
   color: white;
   text-decoration: none;
